# SmoothFrame

./: .gitignore  Cargo.toml  README.md
assets/: icon.sketch
examples/: demo.rs
examples/demo/: cli.rs  main.rs  svg.rs
src/: corner.rs  demo.rs  error.rs  frame.rs  geometry.rs  lib.rs  math.rs  path.rs  rect.rs
src/errors/: mod.rs
src/input/: corner.rs  mod.rs
src/input/frame/: mod.rs  path_builder.rs  validation.rs
src/input/rect/: axis.rs  corner.rs  mod.rs  path_builder.rs
src/output/: format.rs  mod.rs  path.rs
src/process/: mod.rs
src/process/corner/: arc.rs  cubics.rs  geometry.rs  mod.rs
src/types/: geometry.rs  mod.rs
src/utils/: mod.rs
tests/: corner.rs  frame.rs  geometry.rs  path.rs  rect.rs  sketchtool.rs
tests/common/: mod.rs
tests/support/: mod.rs  sketchtool.rs
