[package]
name = "smooth-frame"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Generate Sketch-like smooth corner and smooth frame cubic Bezier paths."
license = "Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/smooth-frame"
keywords = ["smooth", "bezier", "svg", "sketch", "corner"]
categories = ["graphics", "rendering"]
repository = "https://github.com/MarcellGu/SmoothFrame.git"
include = [
    "Cargo.lock",
    "Cargo.toml",
    "LICENSE",
    "README.md",
    "demo.svg",
    "examples/**",
    "src/**",
    "tests/**/*.rs",
]

[dependencies]
